plugins {
    id 'java'
    id 'application'
}

group = 'com.aether'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenLocal()
    mavenCentral()
}

dependencies {
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.18.2'
    implementation 'io.projectreactor:reactor-core:3.7.1'
    implementation 'org.springframework:spring-webflux:6.2.1'

    testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
    testImplementation 'io.projectreactor:reactor-test:3.7.1'
}

application {
    mainClass = 'com.aether.Main'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(Test).configureEach {
    useJUnitPlatform()
    jvmArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
}

tasks.named('run').configure {
    standardInput = System.in
    jvmArgs += ['-Dfile.encoding=UTF-8']
}